--- a/WorkHours/res/layout/activity_sign_up_options.xml
+++ b/WorkHours/res/layout/activity_sign_up_options.xml
@@ -6,11 +6,32 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SignUpOptionsActivity" >
+    tools:context=".MainActivity$DummySectionFragment" >
 
     <TextView
+        android:id="@+id/section_label"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/sign_up_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignLeft="@+id/sign_up_facebook"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="18dp"
+        android:onClick="buttonClick"
+        android:text="@string/sign_up_email" />
+
+    <Button
+        android:id="@+id/sign_up_facebook"
+        style="@style/AppTheme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/sign_up_email"
+        android:onClick="buttonClick"
+        android:layout_alignLeft="@+id/section_label"
+        android:text="@string/sign_up_facebook" />
+
 
 </RelativeLayout>
