--- a/WorkHours/res/layout/activity_init_screen.xml
+++ b/WorkHours/res/layout/activity_init_screen.xml
@@ -14,20 +14,22 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/login_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
+        android:layout_alignLeft="@+id/sign_up_options"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="18dp"
+        android:onClick="buttonClick"
         android:text="@string/login" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/sign_up_options"
         style="@style/AppTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
+        android:layout_above="@+id/login_options"
+        android:onClick="buttonClick"
         android:layout_alignLeft="@+id/section_label"
         android:text="@string/sign_up" />
 
