--- a/WorkHours/res/layout/fragment_add_debt.xml
+++ b/WorkHours/res/layout/fragment_add_debt.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity$DebtFragment" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/sign_up_options"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
