Sprint 1 DAO, Login, done

--- a/WorkHours/res/layout/activity_sign_up_email.xml
+++ b/WorkHours/res/layout/activity_sign_up_email.xml
@@ -63,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/section_label"
         android:layout_alignParentBottom="true"
+        android:onClick="signUp"
         android:layout_marginBottom="28dp"
         android:text="@string/sign_up" />
 
