--- a/WorkHours/res/layout/activity_init_screen.xml
+++ b/WorkHours/res/layout/activity_init_screen.xml
@@ -8,6 +8,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$DummySectionFragment" >
 
+    <RelativeLayout 
+	  android:layout_width="match_parent"
+	  android:layout_height="match_parent" >
+	
+	<com.tyczj.extendedcalendarview.ExtendedCalendarView 
+	    android:id="@+id/calendar"
+	    android:layout_height="match_parent"
+	    android:layout_width="match_parent"/>
+
+</RelativeLayout>
+    
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
