--- a/WorkHours/res/layout/fragment_add_debt.xml
+++ b/WorkHours/res/layout/fragment_add_debt.xml
@@ -8,15 +8,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$DebtFragment" >
 
-    <Button
-        android:id="@+id/sign_up_options"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Button" />
-    
-    
+    <LinearLayout
+            android:id="@+id/eventDetails"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/eventContainer"
+            android:orientation="horizontal"
+            android:layout_weight="1" >
+
+            <TextView
+                android:id="@+id/displayHours"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="@string/text_display_hours"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
 
 </RelativeLayout>
