--- a/WorkHours/res/layout/activity_profile.xml
+++ b/WorkHours/res/layout/activity_profile.xml
@@ -5,84 +5,84 @@
     android:columnCount="2"
     android:orientation="vertical"
     android:rowCount="13" >
-	
-     <TextView
-         android:id="@+id/profile_title"
-         android:layout_column="0"
-         android:layout_gravity="center_horizontal|top"
-         android:layout_row="1"
-         android:text="@string/profile_title" />
+    
+    <TextView
+        android:id="@+id/profile_title"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_columnSpan="2"
+        android:text="@string/profile_title"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
     
     <TextView
         android:id="@+id/profileNameLabel"
         android:layout_column="0"
-        android:layout_row="2"
+        android:layout_row="1"
         android:text="@string/profile_name_label"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/profile_name"
         android:layout_column="0"
-        android:layout_row="3"
+        android:layout_row="2"
         android:ems="10" >
     </TextView>
 
     <TextView
         android:id="@+id/profile_email_label"
         android:layout_column="0"
-        android:layout_row="4"
+        android:layout_row="3"
         android:text="@string/profile_email_label"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/profile_email"
         android:layout_column="0"
-        android:layout_row="5"
+        android:layout_row="4"
         android:ems="10" >
     </TextView>
 
     <TextView
         android:id="@+id/employer_email_label"
         android:layout_column="0"
-        android:layout_row="6"
+        android:layout_row="5"
         android:text="@string/employer_email_label"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/employer_email"
         android:layout_column="0"
-        android:layout_row="7" />
+        android:layout_row="6" />
 
     <TextView
         android:id="@+id/hourly_wage_label"
         android:layout_column="0"
-        android:layout_row="8"
+        android:layout_row="7"
         android:text="@string/hourly_wage_label"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/hourly_wage"
         android:layout_column="0"
-        android:layout_row="9"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_row="8" />
 
     <TextView
         android:id="@+id/tax_label"
         android:layout_column="0"
-        android:layout_row="10"
+        android:layout_row="9"
         android:text="@string/tax_label"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/tax"
         android:layout_column="0"
-        android:layout_row="11"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_row="10"/>
 
     <Button
         android:id="@+id/button_change_details"
         android:layout_column="0"
-        android:layout_row="12"
+        android:layout_row="11"
         android:onClick="changeDetails"
         android:text="@string/button_change_details" />
 
@@ -93,9 +93,8 @@
         android:layout_height="472dp"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="2"
+        android:layout_row="1"
         android:layout_rowSpan="11" />
 
-   
-
+    
 </GridLayout>
