--- a/WorkHours/res/layout/fragment_add_shift.xml
+++ b/WorkHours/res/layout/fragment_add_shift.xml
@@ -20,7 +20,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/button_select_date" />
-        
-        </LinearLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/sendEmailButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sendEmail"
+        android:text="email" />
 
 </LinearLayout>
