--- a/WorkHours/res/layout/fragment_view_events.xml
+++ b/WorkHours/res/layout/fragment_view_events.xml
@@ -5,19 +5,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity$EventFragment" >
 
-    <!--
-        <com.tyczj.extendedcalendarview.ExtendedCalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" 
-            android:layout_weight="16"/>
-     -->
-
     <LinearLayout
         android:id="@+id/eventHeader"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="25" >
+        android:layout_height="0dip"
+        android:layout_weight="1" >
 
         <TextView
             android:id="@+id/displayStartText"
@@ -34,21 +26,12 @@
             android:layout_weight="3"
             android:text="@string/text_display_end"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-<!--  
-        <TextView
-            android:id="@+id/displayHoursText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3.4"
-            android:text="@string/text_display_hours"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
--->
     </LinearLayout>
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1" >
+        android:layout_height="0dip"
+        android:layout_weight="20" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,15 +45,16 @@
                 android:layout_weight="1"
                 android:orientation="vertical" >
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/hoursContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:orientation="vertical" >
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/displayHours"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_marginBottom="0dip"
+        android:layout_weight="1"
+        android:text="@string/text_display_hours"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
