--- a/WorkHours/res/layout/fragment_add_shift.xml
+++ b/WorkHours/res/layout/fragment_add_shift.xml
@@ -15,7 +15,7 @@
         android:layout_height="0dip"
         android:layout_weight="5" >
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/contentBoxMain"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -29,39 +29,68 @@
                 android:text="@string/button_select_date" />
 
             <TextView
-                android:layout_width="fill_parent"
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/textSalaryLast"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/salaryViewLast"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/selectDateButton"
                 android:text="@string/textSalaryNext"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/salaryViewNext"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
-        </LinearLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/hoursText"
+                android:layout_below="@+id/textView1"
+                android:text="Medium Text"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <LinearLayout
+            <TextView
+                android:id="@+id/salaryViewLast"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/hoursText"
+                android:layout_below="@+id/textView4"
+                android:text="Medium Text"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/hoursText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView4"
+                android:layout_below="@+id/salaryViewLast"
+                android:text="@string/textScheduledHours"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/scheduledHours"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/salaryViewLast"
+                android:layout_below="@+id/hoursText"
+                android:text="Small Text"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/salaryViewNext"
+                android:text="@string/textSalaryLast"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/sendEmailButton"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:onClick="sendEmail"
+            android:text="email" />
 
-            <Button
-                android:id="@+id/sendEmailButton"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:onClick="sendEmail"
-                android:text="email" />
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
