--- a/WorkHours/res/layout/fragment_profile.xml
+++ b/WorkHours/res/layout/fragment_profile.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
         android:id="@+id/employer_email_label"
@@ -13,20 +17,20 @@
 
     <EditText
         android:id="@+id/change_employer_email"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/hourly_wage_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hourly_wage_label"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/change_hourly_wage"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -40,22 +44,64 @@
 
     <EditText
         android:id="@+id/change_tax"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/button_save_details"
+    <TextView
+        android:id="@+id/schedule_due_date_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="saveDetails"
-        android:text="@string/button_save_details" />
+        android:text="@string/schedule_due"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/button_cancel"
+    <SeekBar
+        android:id="@+id/due_day"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="31"
+        android:progress="1" />
+
+    <TextView
+        android:id="@+id/due_date_displayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="cancelUpdate"
-        android:text="@string/button_cancel_details" />
+        android:text="@string/day_due"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="108dp"
+        android:layout_weight="0.23"
+        android:gravity="bottom"
+        android:orientation="horizontal" >
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="20" />
+
+        <Button
+            android:id="@+id/button_save_details"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="60"
+            android:onClick="saveDetails"
+            android:text="@string/button_save_details" />
+
+        <Button
+            android:id="@+id/button_cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="60"
+            android:onClick="cancelUpdate"
+            android:text="@string/button_cancel_details" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="20" />
+    </LinearLayout>
 
 </LinearLayout>
