--- a/WorkHours/res/values/strings_init_screens.xml
+++ b/WorkHours/res/values/strings_init_screens.xml
@@ -17,5 +17,7 @@
    	<string name="dialog_new_account">No existing account found. Would you like to create a new account?</string>
    	<string name="dialog_new_account_yes">Yes</string>
    	<string name="dialog_new_account_no">No</string>
+   	<string name="schedule_due">Schedule Due</string>
+   	<string name="day_due"></string>
     
 </resources>
