--- a/WorkHours/res/layout/event_layout.xml
+++ b/WorkHours/res/layout/event_layout.xml
@@ -9,7 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -18,7 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/tvFrom"
         android:layout_below="@+id/tvFrom"
-        android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
@@ -27,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:contentDescription="img" />
+        android:contentDescription="@string/image_desc" />
 
     <TextView
         android:id="@+id/hours"
@@ -36,18 +34,8 @@
         android:layout_alignBaseline="@+id/tvFrom"
         android:layout_alignBottom="@+id/tvFrom"
         android:layout_centerHorizontal="true"
-        android:text="@string/tvHours"
+        android:text="@string/text_display_hours"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-<!--
-    <TextView
-        android:id="@+id/confirmed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/tvFrom"
-        android:text="@string/tvConfirmed"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
--->
 
     <TextView
         android:id="@+id/tvHours"
@@ -56,7 +44,6 @@
         android:layout_alignBaseline="@+id/tvTo"
         android:layout_alignBottom="@+id/tvTo"
         android:layout_centerHorizontal="true"
-        android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
