--- a/WorkHours/res/layout/fragment_profile.xml
+++ b/WorkHours/res/layout/fragment_profile.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="60"
             android:onClick="saveDetails"
-            android:text="@string/button_save_details" />
+            android:text="@string/button_save" />
 
         <Button
             android:id="@+id/button_cancel"
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="60"
             android:onClick="cancelUpdate"
-            android:text="@string/button_cancel_details" />
+            android:text="@string/button_cancel" />
 
         <View
             android:layout_width="0dp"
