--- a/WorkHours/res/layout/fragment_profile.xml
+++ b/WorkHours/res/layout/fragment_profile.xml
@@ -69,6 +69,14 @@
         android:layout_height="wrap_content"
         android:text="@string/day_due"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+        <Switch
+        android:id="@+id/payment_mode"
+        android:textOff="@string/monthly"
+        android:textOn="@string/weekly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/payment" />
 
     <LinearLayout
         android:layout_width="fill_parent"
