--- a/WorkHours/res/layout/activity_shift.xml
+++ b/WorkHours/res/layout/activity_shift.xml
@@ -99,8 +99,7 @@
                 android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@string/text_repeat_count"
-                android:onClick="clickRepeatCount" />
+                android:hint="@string/text_repeat_count" />
 
         </LinearLayout>
     </LinearLayout>
