--- a/WorkHours/res/layout/activity_init_screen.xml
+++ b/WorkHours/res/layout/activity_init_screen.xml
@@ -7,31 +7,61 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$DummySectionFragment" >
-    
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/login_options"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/sign_up_options"
+        android:layout_alignLeft="@+id/linearLayout1"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="18dp"
-        android:onClick="buttonClick"
-        android:text="@string/login" />
+        android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/sign_up_options"
-        style="@style/AppTheme"
-        android:layout_width="match_parent"
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
+
+        <Button
+            android:id="@+id/login_options"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
+            android:layout_weight="80"
+            android:onClick="buttonClick"
+            android:text="@string/login" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/login_options"
-        android:onClick="buttonClick"
-        android:layout_alignLeft="@+id/section_label"
-        android:text="@string/sign_up" />
+        android:layout_above="@+id/linearLayout2"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal" >
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
+
+        <Button
+            android:id="@+id/sign_up_options"
+            style="@style/AppTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="80"
+            android:onClick="buttonClick"
+            android:text="@string/sign_up" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
+    </LinearLayout>
 
 </RelativeLayout>
