--- a/WorkHours/res/layout/fragment_profile_details.xml
+++ b/WorkHours/res/layout/fragment_profile_details.xml
@@ -10,19 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:rowCount="15" >
 
-    <ListView
-        android:id="@+id/listView_details"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/linearLayout1"
-        android:layout_gravity="left|top" >
-
-    </ListView>
-
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:layout_alignLeft="@+id/listView_details"
         android:layout_alignParentBottom="true"
         android:gravity="bottom"
         android:orientation="horizontal" >
@@ -30,20 +21,46 @@
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="20" />
+            android:layout_weight="10" />
 
         <Button
             android:id="@+id/button_change_details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="60"
+            android:layout_weight="80"
             android:onClick="changeDetails"
             android:text="@string/button_change_details" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="20" />
+            android:layout_weight="10" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal" >
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
+
+        <ListView
+            android:id="@+id/listView_details"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="80"
+            android:background="@drawable/listview_border" >
+        </ListView>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
     </LinearLayout>
 
 </RelativeLayout>
